Fixed entry overflows, added some padding and stuff

--- a/src/components/entry/entry.css
+++ b/src/components/entry/entry.css
@@ -8,10 +8,6 @@
 }
 
 .entry-title {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-
     font-size: 14px;
     font-weight: bold;
 }
@@ -23,4 +19,13 @@
     @import url('https://fonts.googleapis.com/css?family=Roboto');
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
+}
+
+.entry-title, .entry-times {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
+    box-sizing: border-box;
+    padding: 10px;
 }
